# Sudoku-Solver

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: prototype.ipynb
src/api/: __init__.py  config.py  main.py
src/api/routes/: base.py  sudoku.py
src/api/schemas/: sudoku.py
src/core/: detector.py  ocr.py  solver.py  visualizer.py
src/io/: sudoku_ui.py
