[project]
name = "sudoku-solver"
version = "0.1.0"
description = "Computer vision Sudoku solver from images with real-time solutions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
license = { file = "LICENSE" }

[dependency-groups]
dev = [
    "matplotlib>=3.10.0",
]
